--- a/src/Simbuino4Web/Simbuino4Web/Simbuino4Web.csproj
+++ b/src/Simbuino4Web/Simbuino4Web/Simbuino4Web.csproj
@@ -219,13 +219,16 @@
     <Content Include="Scripts\Views\AtmelProcessor.js" />
     <Content Include="Scripts\Views\AtmelRegisters.js" />
     <Content Include="Scripts\Views\AudioPlayer.js" />
+    <Content Include="Scripts\Views\Bootloader.js" />
     <Content Include="Scripts\Views\Buttons.js" />
     <Content Include="Scripts\Views\class.js" />
     <Content Include="Scripts\Views\EEPROM.js" />
     <Content Include="Scripts\Views\FlagsRegister.js" />
     <Content Include="Scripts\Views\HexDecoder.js" />
     <Content Include="Scripts\Views\Lcd.js" />
+    <Content Include="Scripts\Views\Loader.js" />
     <Content Include="Scripts\Views\MemoryMappedRegister.js" />
+    <Content Include="Scripts\Views\SdDevice.js" />
     <Content Include="Scripts\Views\Simulation.js" />
     <Content Include="Scripts\Views\SPI.js" />
     <Content Include="Scripts\Views\USART.js" />
